# cgo-lazyquicktime

./: .drone.yml  .gitignore  CMakeLists.txt  Makefile  README.md  Rakefile  file_source.go  frameset.go  frameset_map.go  framesource.go  framesource_map.go  get_frame.go  image.go  lazyqt.go  main.go  movie.go  movie_info.go  oneshot.go  sequential.go  sequential_map.go  simple_api.go  sum.go  types.h  wercker.yml
cmake/: BuildGTestLibraries.cmake
cmd/: CMakeLists.txt  player.cpp
test_c/: CMakeLists.txt  CamHD_Vent_Short.mov.sha1  four_mov.json  test_data_paths.h  test_frame_source.cpp  test_get_frame.cpp  test_get_frame_oneshot.cpp  test_movie.cpp  test_movie_info.cpp  test_movie_info_oneshot.cpp  test_oneshot_get_frame.cpp  test_oneshot_movie_info.cpp  test_sequential.cpp  test_simple_api.cpp  test_sum.c  test_sum.cpp  validate_camhd_frame.cpp  validate_camhd_frame.h
test_c/cmake/: BuildGTestLibraries.cmake
